fix(core): do not hide nested scrollbars

--- a/projects/core/components/root/root.style.less
+++ b/projects/core/components/root/root.style.less
@@ -34,6 +34,11 @@ tui-root {
 tui-root > .t-root-scrollbar {
     .fullsize(fixed, inset);
     margin: 0;
+    display: none;
+}
+
+[data-tui-theme] tui-root > .t-root-scrollbar {
+    display: block;
 }
 
 .t-root-content {
